Edited add product modal and function.

--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -38,8 +38,8 @@
                 <input type="text" name="RP" class="form-control mb-2" id="addRP" placeholder="200" required min="1" max="8" pattern="[0-9]*">
               </div>
               <div class="col-auto">
-                <label for="addQ">Quantity</label>
-                <input type="text" name="Quantity" class="form-control mb-2" id="addQ" placeholder="500" required min="1" max="8" pattern="[0-9]*">
+                <label for="addLocation">Storage Location</label>
+                <input type="text" name="Location" class="form-control mb-2" id="addLocation" placeholder="01-02-03" required min="1" max="8" pattern="^[0-9]{2}-[0-9]{2}-[0-9]{2}">
               </div>
               <div class="col-auto">
                 <label for="addPrice">Price</label>
