--- a/templates/login.html
+++ b/templates/login.html
@@ -1,41 +1,43 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container-fluid">
-    <div class="row justify-content-center align-items-center">
-        <div class="col-4">
+<link rel="stylesheet" href="{{ url_for('static', filename='signin.css') }}">
 
-        </div>
-
-        <div class="col-4">
-            <h1 style="margin-top:50px;">PyMarket Storage Portal</h1>
-
-            <h3 style="margin-top:50px;">Sign In</h3>
-            <form action="" method="post">
-                {{ form.hidden_tag() }}
-                <p>
-                    {{ form.username.label }}<br>
-                    {{ form.username(size=32) }}<br>
-                    {% for error in form.username.errors %}
-                    <span style="color: red;">[{{ error }}]</span>
-                    {% endfor %}
-                </p>
-                <p>
-                    {{ form.password.label }}<br>
-                    {{ form.password(size=32) }}<br>
-                    {% for error in form.password.errors %}
-                    <span style="color: red;">[{{ error }}]</span>
-                    {% endfor %}
-                </p>
-                <p>{{ form.submit() }}</p>
-            </form>
-
-        </div>
-
-        <div class="col-4 ">
-
-        </div>
+<div class="container" style="margin-top:80px;">
+    <div class="text-center">
+        <h1>PyMarket Storage Portal</h1>
+        <h3 style="margin:10px;">Sign In</h3>
+    </div>
+    <div class="center_div">
+        <form action="" method="post">
+            {{ form.hidden_tag() }}
+            <p style="margin-bottom:0px;">
+                
+                {{ form.username(size=32) }}<br>
+                {% for error in form.username.errors %}
+                <span style="color: red;">[{{ error }}]</span>
+                {% endfor %}
+            </p>
+            <p style="margin-bottom:0px;">
+                
+                {{ form.password(size=32) }}<br>
+                {% for error in form.password.errors %}
+                <span style="color: red;">[{{ error }}]</span>
+                {% endfor %}
+            </p>
+            <p>{{ form.submit() }}</p>
+        </form>
     </div>
 </div>
+<script>
+    $(document).ready(function() {
+        $("#submit").addClass("btn btn-primary btn-block btn-sm");
+        $("#username").addClass("form-control");
+        $("#password").addClass("form-control");
+        $("#username").attr("placeholder", "username");
+        $("#password").attr("placeholder", "password");
+
+    });
+</script>
 
 {% endblock %}
