--- a/templates/sales.html
+++ b/templates/sales.html
@@ -25,25 +25,68 @@
 </div>
 <script>
 
-//Listener for checkbx
-function toggleCheckbox(productID, SKU, quantity)
+var numOfFilledProducts = {};
+var allFilled = {};
+
+
+function FilledButton(OrderId)
 {
-  var stringy = "" + productID + SKU;
+  
+  if(allFilled[OrderId] == true)
+  {
+    console.log("filled");
+    return 1;
+  }
+  else
+  {
+    console.log("not filled");
+    return 0;
+  }
+
+
+}
+
+
+function updateFilledBox(OrderId)
+{
+
+
+  numOfFilledProducts[OrderId] -= 1;
+
+  console.log(numOfFilledProducts[OrderId]);
+  if(numOfFilledProducts[OrderId] == 0)
+  {
+    allFilled[OrderId] = true;
+    console.log("all check marks checked");
+    return 0;
+  }
+
+  else
+  {
+    return 0;
+  }
+}
+
+//Listener for checkbx
+function toggleCheckbox(OrderID, SKU, quantity)
+{
+  var stringy = "" + OrderID + SKU;
   
   document.getElementById(stringy).disabled = true;
+
+  console.log(numOfFilledProducts[OrderID]);
 
   $.ajax({
               type: "POST",
               url: "/fillproductdata",
-              data: {row_SKU: SKU, row_quantity: quantity},
+              data: {row_SKU: SKU, row_quantity: quantity, row_OrderId: OrderID},
               dataType: "text",
               success: function(response) {
                 console.log("ajax success");
                 
+                updateFilledBox(OrderID);
+
                 var obj = JSON.parse(response);
-                
-                div
-                  .html( format_table(obj.data, data[0]) )
                   
               },
               error: function(err) {
@@ -67,6 +110,14 @@ function format_table( d, OrderID ) {
      		+'</tr>';   
 
     var i;
+
+    //disableFilledBox(d.length);
+    
+
+    numOfFilledProducts[OrderID] = d.length;
+    allFilled[OrderID] = false;
+    
+
     for(i=0; i < d.length; i++)
     {
     str +=	'<tr>'+
@@ -74,7 +125,7 @@ function format_table( d, OrderID ) {
         	'<td>'+d[i][1]+'</td>'+
         	'<td>'+d[i][2]+'</td>'+
         	'<td>'+d[i][3]+'</td>'+
-        	'<td><input id="'+ OrderID +''+ d[i][0] + '" type="checkbox" onclick="toggleCheckbox('+ OrderID +',' + d[i][0] + ','+ d[i][3] +')">'+'</td>'+
+        	'<td><input id="'+ OrderID +''+ d[i][0] + '" type="checkbox" onclick="toggleCheckbox('+ OrderID +',' + d[i][0] + ','+ d[i][3] + ')">'+'</td>'+
         	'</tr>';
     }
     str += '</table>';
@@ -119,6 +170,7 @@ function format_table( d, OrderID ) {
    
     console.log(typeof(sales_data));
     console.log(sales_data);
+    var increment = 1;
     var table = $('#sales_table').DataTable( {
       data: sales_data, 
 
@@ -136,7 +188,7 @@ function format_table( d, OrderID ) {
             "targets": -1,
             title: "Status",
             "data": null,
-            "defaultContent": '<button type="button" name="filledButton" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#filledModal">Filled</button>'
+            "defaultContent": '<button type="button" id="filledButton" name="filledButton" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#filledModal">Filled</button>'
            
         }
       
@@ -151,10 +203,54 @@ function format_table( d, OrderID ) {
            return '<i class="fa a-plus-square" aria-hidden="true"></i>';
                      }
       } ]*/
+
       ]
+      
     } );
     
   
+    // filled a product
+    $('#sales_table tbody').on('click', 'button', function() {
+        var name = $(this).attr('name');
+        if (name == "filledButton") {
+            var tr = $(this).closest('tr');
+            var row = table.row( tr );
+            var data = row.data();
+
+
+            console.log("pressed filled button");  
+            console.log(allFilled[data[0]]);  
+            var result = FilledButton(data[0]);
+                if(result == 1)
+                {
+                   console.log('filled sucess');
+                }
+                else
+                {
+                   console.log("All checkmarks not pressed");
+                   return 0
+                }
+
+            if(confirm("Are you sure you want to delete this Product?")){
+                $.ajax({
+                          type:'POST',
+                          url:'/filledbutton',
+                          data: {row_OrderId: data[0]},
+                          dataType: 'text',
+
+                          success: function(response) {
+                              console.log("We are now going to fill an order");
+                          },
+                          error: function(err){
+                              console.log(err);
+                          }
+                });
+            } else {
+                alert("Canceling deletion.");
+            }
+        }
+    });
+
 
     $('#sales_table tbody').on('click', 'td.details-control', function () {
         var tr = $(this).closest('tr');
