--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
                 <ul class="navbar-nav mr-auto">
 
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('sales.sales') }}">
+                        <a class="nav-link" href="{{ url_for('orders.orders') }}">
                             <span data-feather="file"></span>
                             Orders
                         </a>
