Adding more frontend elements

--- a/static/signin.css
+++ b/static/signin.css
@@ -3,5 +3,8 @@
     width:29% /* value of your choice which suits your alignment */
 }
 body{
-  background-color: #f5f5f5;
+  /* background-color: #2ed573; */
+  background: #11998e;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #38ef7d, #11998e);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #38ef7d, #11998e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
