--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
       {% else %}
       <title>Welcome to PyMarket</title>
       {% endif %}
-
+      <link rel="stylesheet" href="{{ url_for('static', filename='table.css') }}">
       <!--Bootstrap core CSS-->
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
       <!--END Bootstrap-->
@@ -15,8 +15,10 @@
         <!--JQUERY-->
       <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
        <!--DataTables-->
-    <script language="JavaScript" type="text/javascript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+       <script language="JavaScript" type="text/javascript" src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
     <!--END PyMarket CSS-->
+    <link rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Gugi">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-fixed-top">
