--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -1,17 +1,9 @@
 {% extends "base.html" %}
 
   {% block content %}
-<style>
-  td.details-control {
-    background: url('https://datatables.net/examples/resources/details_open.png') no-repeat center center;
-    cursor: pointer;
-  }
-  tr.shown td.details-control {
-      background: url('https://datatables.net/examples/resources/details_close.png') no-repeat center center;
-  }
-</style>
+
 <div class="container-fluid">
-  <h1 align="center">Inventory Page</h1>
+  <h1 align="center" style="font-family: 'Gugi', serif;">Inventory Page</h1>
   <!--Add Button Model-->
   <div class="modal fade" id='addModal' tabindex="1" role="dialog" aria-labelledby="addModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -155,9 +147,14 @@
         Add Product
       </button>
     </div>
-    <div class="table-responsive">
-        <table id="inventory_table" style="width:100%" class="table table-striped table-bordered"></table>
-        <form action="" method="POST"></form>
+    <div class="limiter">
+      <div class="container-table100">
+        <div class="wrap-table100">
+          <div class="table-responsive">
+            <table id="inventory_table" style="width:100%" class="table"></table>
+            <form action="" method="POST"></form>
+          </div>
+      </div>
     </div>
   </div>
 </div>
