--- a/templates/orders.html
+++ b/templates/orders.html
@@ -2,24 +2,14 @@
 
   {% block content %}
 
-  <style>
-  td.details-control {
-    background: url('https://datatables.net/examples/resources/details_open.png') no-repeat center center;
-    cursor: pointer;
-  }
-  tr.shown td.details-control {
-      background: url('https://datatables.net/examples/resources/details_close.png') no-repeat center center;
-      color:red;
-  }
-</style>
-
 <div class="container-fluid">
-  <h1 align="center">Orders</h1>
-
-  <div class="container">
-    <div class="table-responsive">
-        <table id="sales_table" style="width:100%" class="table table-striped table-bordered"></table>
-        
+  <h1 align="center" style="font-family: 'Gugi', serif;">Orders</h1>
+  <div class="limiter">
+    <div class="container-table100">
+      <div class="wrap-table100">
+        <div class="table-responsive">
+            <table id="sales_table" style="width:100%" class="table"></table>
+        </div>
     </div>
   </div>
 </div>
@@ -31,7 +21,7 @@ var allFilled = {};
 
 function FilledButton(OrderId)
 {
-  
+
   if(allFilled[OrderId] == true)
   {
     console.log("filled");
@@ -74,7 +64,7 @@ function updateFilledBox(OrderId)
 function toggleCheckbox(CustID, OrderID, SKU, quantity, cartID)
 {
   var stringy = "" + OrderID + SKU;
-  
+
   document.getElementById(stringy).disabled = true;
 
   console.log("numOfFilledProducts");
@@ -87,11 +77,11 @@ function toggleCheckbox(CustID, OrderID, SKU, quantity, cartID)
               dataType: "text",
               success: function(response) {
                 console.log("ajax success");
-                
+
                 updateFilledBox(OrderID);
 
                 var obj = JSON.parse(response);
-                  
+
               },
               error: function(err) {
                   console.log(err);
@@ -103,22 +93,22 @@ function format_table( d, OrderID ) {
 
     // `d` is the original data object for the row
     var str = '<table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">';
-    str += 	'<tr>'+ 
+    str += 	'<tr>'+
     		'<td>'+'SKU'+'</td>'+
         	'<td>'+'Name'+'</td>'+
         	'<td>'+'Location'+'</td>'+
         	'<td>'+'Quantity'+'</td>'+
         	'<td>'+'Status'+'</td>'
-     		+'</tr>';   
+     		+'</tr>';
 
     var i;
 
     //disableFilledBox(d.length);
-    
+
 
     numOfFilledProducts[OrderID] = d.length;
     allFilled[OrderID] = false;
-    
+
 console.log("status is below");
 console.log(d[0][4]);
 
@@ -132,12 +122,12 @@ console.log(d[0][4]);
         	'<td>'+d[i][3]+'</td>';
 
 
-                
+
         if(d[i][4] == 'FILLED')
         {
           console.log("it's filled");
           str +='<td><input disabled id="'+ OrderID +''+ d[i][0] + '" type="checkbox" checked>'+'</td>'+
-          '</tr>';    
+          '</tr>';
             updateFilledBox(OrderID);
         }
         else
@@ -146,7 +136,7 @@ console.log(d[0][4]);
            str += '<td><input id="'+ OrderID +''+ d[i][0] + '" type="checkbox" onclick="toggleCheckbox(' + d[i][6] + ',' + OrderID +',' + d[i][0] + ','+ d[i][3] + ',' + d[i][5] + ')">'+'</td>'+
           '</tr>';
         }
-                 
+
     }
     str += '</table>';
 
@@ -159,7 +149,7 @@ console.log(d[0][4]);
         .addClass( 'loading' )
         .text( 'Loading...' );
 
-    
+
 
     var product_data;
     $.ajax({
@@ -169,7 +159,7 @@ console.log(d[0][4]);
               dataType: "text",
               success: function(response) {
                 console.log("ajax success");
-                
+
                var obj = JSON.parse(response);
                 console.log(obj.data);
 
@@ -189,12 +179,12 @@ console.log(d[0][4]);
 
   $(document).ready(function() {
     var sales_data = {{sales|tojson}};
-   
+
     console.log(typeof(sales_data));
     console.log(sales_data);
     var increment = 1;
     var table = $('#sales_table').DataTable( {
-      data: sales_data, 
+      data: sales_data,
 
       "columns": [ {
           "targets": 0,
@@ -202,22 +192,22 @@ console.log(d[0][4]);
           "data": null,
           "defaultContent": ''
         },
-       
+
         { title: "Order ID", "data": 0},
         { title: "Customer ID",  "data": 1},
-        { title: "Created Date",  "data": 2}, 
+        { title: "Created Date",  "data": 2},
         {
             "targets": -1,
             title: "Status",
             "data": null,
             "defaultContent": '<button type="button" id="filledButton" name="filledButton" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#filledModal">Update Status</button>'
-           
+
         }
       ]
-      
+
     } );
-    
-  
+
+
     // filled a product
     $('#sales_table tbody').on('click', 'button', function() {
         var name = $(this).attr('name');
@@ -227,9 +217,9 @@ console.log(d[0][4]);
             var data = row.data();
 
 
-            console.log("pressed filled button");  
+            console.log("pressed filled button");
             console.log(allFilled[data[0]]);
-            console.log(row.data());  
+            console.log(row.data());
 
             var result = FilledButton(data[0]);
             console.log(result);
@@ -269,7 +259,7 @@ console.log(d[0][4]);
     $('#sales_table tbody').on('click', 'td.details-control', function () {
         var tr = $(this).closest('tr');
         var row = table.row( tr );
- 
+
         if ( row.child.isShown() ) {
             // This row is already open - close it
             row.child.hide();
@@ -277,7 +267,7 @@ console.log(d[0][4]);
         }
         else {
             // Open this row
-            
+
             row.child( getProductTable(row.data()) ).show();
 
 
