--- a/templates/transaction.html
+++ b/templates/transaction.html
@@ -2,22 +2,15 @@
 
 {% block content %}
 
-<style>
-td.details-control {
-    background: url('https://datatables.net/examples/resources/details_open.png') no-repeat center center;
-    cursor: pointer;
-}
-tr.shown td.details-control {
-    background: url('https://datatables.net/examples/resources/details_close.png') no-repeat center center;
-}
-</style>
-
 <div class="container-fluid">
-    <h1 align="center">{{ title }}</h1>
-    <div class="container-fluid">
-        <div class="table-responsive">
-            <table id="transaction_table" style="width:100%" class="table table-striped table-bordered"></table>
-        </div>
+    <h1 align="center" style="font-family: 'Gugi', serif;">{{ title }}</h1>
+    <div class="limiter">
+      <div class="container-table100">
+        <div class="wrap-table100">
+          <div class="table-responsive">
+              <table id="transaction_table" style="width:100%" class="table"></table>
+          </div>
+      </div>
     </div>
 </div>
 
