--- a/static/signin.css
+++ b/static/signin.css
@@ -3,8 +3,35 @@
     width:29% /* value of your choice which suits your alignment */
 }
 body{
-  /* background-color: #2ed573; */
-  background: #11998e;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #38ef7d, #11998e);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #38ef7d, #11998e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background-image: url("bg1.jpg");
+}
+
+.wrapper {
+  background-size: 100%;
+  width: 100%;
+  height: 100%;
+  min-width: 950px;
+}
+
+.container {
+  position: relative;
+  margin-right: auto;
+  margin-left: auto;
+  top: 7%;
+  width: 60%;
+  background-color: #ffffff;
+  border: 1px solid #EDEDED;
+  border-radius: 7px;
+  padding: 5px;
+  opacity: 0.98;
+}
+
+.text-center {
+  width: 100%;
+  height: 90px;
+  background-color: #26de81;
+  color: #1e272e;
+  text-align: center;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
