--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <link rel="stylesheet" href="{{ url_for('static', filename='signin.css') }}">
-
+<div class="wrapper">
 <div class="container" style="margin-top:80px;">
     <div class="text-center" style="font-family: 'Gugi', serif;">
         <h1>PyMarket Storage Portal</h1>
@@ -28,6 +28,7 @@
             <p style="font-family: 'Gugi', serif;">{{ form.submit() }}</p>
         </form>
     </div>
+</div>
 </div>
 <script>
     $(document).ready(function() {
