--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,13 @@
 <html>
+    <style>
+    .navbar {
+
+    background-color: #000000;
+    }
+    .navbar-brand, .nav-link {
+      color: #ffffff;
+    }
+    </style>
     <head>
       {% if title %}
       <title>{{ title }} - PyMarket</title>
@@ -22,7 +31,7 @@
       href="https://fonts.googleapis.com/css?family=Gugi">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark navbar-fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="{{ url_for('dashboard.dashboard') }}" style="font-family: 'Gugi', serif;">
                 <span data-feather="home"></span>
