--- a/static/table.css
+++ b/static/table.css
@@ -51,7 +51,7 @@ iframe {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-wrap: wrap;
+  /* flex-wrap: wrap; */
   padding: 33px 30px;
 }
 
