--- a/static/table.css
+++ b/static/table.css
@@ -42,7 +42,7 @@ iframe {
  border: none !important;
 }
 .container-table100 {
-  width: 105%;
+  width: 100%;
   min-height: 0vh;
   display: -webkit-box;
   display: -webkit-flex;
@@ -51,7 +51,7 @@ iframe {
   display: flex;
   align-items: center;
   justify-content: center;
-  /* flex-wrap: wrap; */
+  flex-wrap: wrap;
   padding: 33px 30px;
 }
 
