Resized table under row expansion

--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -151,7 +151,7 @@
       <div class="container-table100">
         <div class="wrap-table100">
           <div class="table-responsive">
-            <table id="inventory_table" style="width:100%" class="table"></table>
+            <table id="inventory_table" class="table"></table>
             <form action="" method="POST"></form>
           </div>
       </div>
