--- a/templates/orders.html
+++ b/templates/orders.html
@@ -92,7 +92,7 @@ function toggleCheckbox(CustID, OrderID, SKU, quantity, cartID)
 function format_table( d, OrderID ) {
 
     // `d` is the original data object for the row
-    var str = '<table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">';
+    var str = '<table cellpadding="5" id="salesorder"cellspacing="0" border="0" style="padding-left:50px;">';
     str += 	'<tr>'+
     		'<td>'+'SKU'+'</td>'+
         	'<td>'+'Name'+'</td>'+
