--- a/static/table.css
+++ b/static/table.css
@@ -20,7 +20,10 @@ background: linear-gradient(to right, #eef2f3, #8e9eab); */
   width: 100%;
   margin: 0 auto;
 }
-
+table#batchtable, table#salesorder{
+  width: 60%;
+  margin: 0 40px;
+}
 input {
  border-spacing: 1;
  border-collapse: collapse;
