--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -12,7 +12,7 @@
           <div class="container-table100">
             <div class="wrap-table100">
               <div class="table-responsive">
-                  <table id="expire_table" style="width:100%" class="table"></table>
+                  <table id="expire_table" style="width:100%" class="table table-striped"></table>
               </div>
           </div>
         </div>
@@ -25,7 +25,7 @@
           <div class="container-table100">
             <div class="wrap-table100">
               <div class="table-responsive">
-                  <table id="reorder_table" style="width:100%" class="table"></table>
+                  <table id="reorder_table" style="width:100%" class="table table-striped"></table>
               </div>
           </div>
         </div>
