--- a/templates/orders.html
+++ b/templates/orders.html
@@ -8,7 +8,7 @@
     <div class="container-table100">
       <div class="wrap-table100">
         <div class="table-responsive">
-            <table id="sales_table" style="width:100%" class="table"></table>
+            <table id="sales_table" style="width:100%" class="table table-striped"></table>
         </div>
     </div>
   </div>
