--- a/templates/transaction.html
+++ b/templates/transaction.html
@@ -8,7 +8,7 @@
       <div class="container-table100">
         <div class="wrap-table100">
           <div class="table-responsive">
-              <table id="transaction_table" style="width:100%" class="table"></table>
+              <table id="transaction_table" style="width:100%" class="table table-striped"></table>
           </div>
       </div>
     </div>
