--- a/static/table.css
+++ b/static/table.css
@@ -63,6 +63,9 @@ iframe {
 }
 table {
   /* font-family: 'Gugi', cursive; */
+  /* font-weight: 400;
+  color: white;
+  font-size: 13pt; */
   border-spacing: 1;
   border-collapse: collapse;
   background: #f1f2f6;
@@ -72,7 +75,7 @@ table {
   margin: 0 auto;
   position: relative;
 }
-
+/* font-weight: 400; color: white; font-size: 13pt; */
 table * {
   position: relative;
 }
@@ -82,6 +85,9 @@ table td, table th {
 }
 table thead tr {
   height: 60px;
+  font-weight: 400;
+  color: white;
+  font-size: 13pt;
   background: #1e90ff;
 
 }
