--- a/templates/orders.html
+++ b/templates/orders.html
@@ -8,7 +8,7 @@
     <div class="container-table100">
       <div class="wrap-table100">
         <div class="table-responsive">
-            <table id="sales_table" style="width:100%" class="table table-striped"></table>
+            <table id="sales_table" class="table table-striped"></table>
         </div>
     </div>
   </div>
@@ -94,11 +94,11 @@ function format_table( d, OrderID ) {
     // `d` is the original data object for the row
     var str = '<table cellpadding="5" id="salesorder"cellspacing="0" border="0" style="padding-left:50px;">';
     str += 	'<tr>'+
-    		'<td>'+'SKU'+'</td>'+
-        	'<td>'+'Name'+'</td>'+
-        	'<td>'+'Location'+'</td>'+
-        	'<td>'+'Quantity'+'</td>'+
-        	'<td>'+'Status'+'</td>'
+    		'<th>'+'SKU'+'</th>'+
+        	'<th>'+'Name'+'</th>'+
+        	'<th>'+'Location'+'</th>'+
+        	'<th>'+'Quantity'+'</th>'+
+        	'<th>'+'Status'+'</th>'
      		+'</tr>';
 
     var i;
