--- a/static/signin.css
+++ b/static/signin.css
@@ -3,7 +3,12 @@
     width:29% /* value of your choice which suits your alignment */
 }
 body{
-  background-image: url("bg1.jpg");
+  background-image: url("p3.jpg");
+  background-size: 100%;
+  width: 100%;
+  height: 100%;
+  min-width: 950px;
+   /* background-color: #E0E0E0; */
 }
 
 .wrapper {
@@ -17,7 +22,7 @@ body{
   position: relative;
   margin-right: auto;
   margin-left: auto;
-  top: 7%;
+  top: 10%;
   width: 60%;
   background-color: #ffffff;
   border: 1px solid #EDEDED;
@@ -28,10 +33,14 @@ body{
 
 .text-center {
   width: 100%;
-  height: 90px;
-  background-color: #26de81;
-  color: #1e272e;
+  height: 95px;
+  /* background-color: #000000; */
+  background-color: #304FFE;
+  /* background-color: #B2DFDB; */
+  /* background-color: #26de81; */
+  color: #ffffff;
   text-align: center;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+  margin-bottom: 40px;
 }
