--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -3,7 +3,7 @@
   {% block content %}
 
 <div class="container-fluid">
-  <h1 align="center" style="font-family: 'Gugi', serif;">Inventory Page</h1>
+  <h1 align="center" style="font-family: 'Titillium Web', san-serif;">Inventory Page</h1>
   <!--Add Button Model-->
   <div class="modal fade" id='addModal' tabindex="1" role="dialog" aria-labelledby="addModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -151,7 +151,7 @@
       <div class="container-table100">
         <div class="wrap-table100">
           <div class="table-responsive">
-            <table id="inventory_table" class="table table-striped"></table>
+            <table id="inventory_table" class="table table-striped table-bordered"></table>
             <form action="" method="POST"></form>
           </div>
       </div>
