--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='signin.css') }}">
 <div class="wrapper">
 <div class="container" style="margin-top:80px;">
-    <div class="text-center" style="font-family: 'Gugi', serif;">
+    <div class="text-center" style="font-family: 'Titillium Web', san-serif;">
         <h1>PyMarket Storage Portal</h1>
         <h3 style="margin:10px;">Sign In</h3>
     </div>
@@ -25,7 +25,7 @@
                 <span style="color: red;">[{{ error }}]</span>
                 {% endfor %}
             </p>
-            <p style="font-family: 'Gugi', serif;">{{ form.submit() }}</p>
+            <p style="font-family: 'Titillium Web', san-serif;">{{ form.submit() }}</p>
         </form>
     </div>
 </div>
