--- a/templates/orders.html
+++ b/templates/orders.html
@@ -3,12 +3,12 @@
   {% block content %}
 
 <div class="container-fluid">
-  <h1 align="center" style="font-family: 'Gugi', serif;">Orders</h1>
+  <h1 align="center" style="font-family: 'Titillium Web', san-serif;">Orders</h1>
   <div class="limiter">
     <div class="container-table100">
       <div class="wrap-table100">
         <div class="table-responsive">
-            <table id="sales_table" class="table table-striped"></table>
+            <table id="sales_table" class="table table-striped table-bordered"></table>
         </div>
     </div>
   </div>
