--- a/templates/transaction.html
+++ b/templates/transaction.html
@@ -3,12 +3,12 @@
 {% block content %}
 
 <div class="container-fluid">
-    <h1 align="center" style="font-family: 'Gugi', serif;">{{ title }}</h1>
+    <h1 align="center" style="font-family: 'Titillium Web', san-serif;">{{ title }}</h1>
     <div class="limiter">
       <div class="container-table100">
         <div class="wrap-table100">
           <div class="table-responsive">
-              <table id="transaction_table" style="width:100%" class="table table-striped"></table>
+              <table id="transaction_table" style="width:100%" class="table table-striped table-bordered"></table>
           </div>
       </div>
     </div>
