--- a/templates/base.html
+++ b/templates/base.html
@@ -4,10 +4,11 @@
 
     /* background-color: #B2DFDB; */
     /* background-color: #000000; */
-    background-color: #304FFE;
+    /* background-color: #304FFE; */
     /* background-color: #00E676; */
     /* background-color: #00C853; */
-    /* background-color: #4CAF50; */
+    background-color: #4CAF50;
+    margin-bottom: 10px;
     }
     .navbar-brand, .nav-link {
       color: #ffffff;
@@ -16,7 +17,9 @@
     }
 
     .navbar-brand:hover, .nav-link:hover {
-      color: #000000;
+      color: #ffffff;
+      font-size: 20px;
+      font-weight: 600;
     }
     /* ul.nav a:hover { color: #00C853 !important; } */
     </style>
