--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -6,11 +6,11 @@
 <h1 class="text-center" style="font-family: 'Titillium Web', san-serif;">Dashboard</h1>
 </div>
 <div class="row" style="margin-top:20px;">
-    <div class="col-sm-10">
-        <h2 class="sub-header" style="font-family: 'Titillium Web', san-serif;">Items Expiring Soon</h2>
+    <div class="col-sm-6">
         <div class="limiter">
           <div class="container-table100">
             <div class="wrap-table100">
+                <h2 class="sub-header" style="font-family: 'Titillium Web', san-serif;">Items Expiring Soon</h2>
               <div class="table-responsive">
                   <table id="expire_table" style="width:100%" class="table table-striped table-bordered"></table>
               </div>
@@ -18,12 +18,12 @@
         </div>
 
     </div>
-
-    <div class="col-sm-10">
-        <h2 class="sub-header" style="font-family: 'Titillium Web', san-serif;">Products Need Reordering</h2>
+  </div>
+    <div class="col-sm-6">
         <div class="limiter">
           <div class="container-table100">
             <div class="wrap-table100">
+              <h2 class="sub-header" style="font-family: 'Titillium Web', san-serif;">Products Need Reordering</h2>
               <div class="table-responsive">
                   <table id="reorder_table" style="width:100%" class="table table-striped table-bordered"></table>
               </div>
